@@ -7,16 +7,15 @@ import java.util.Optional;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import static org.mockito.ArgumentMatchers.any;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.translator.translator.cache.TranslationCache;
@@ -40,20 +39,15 @@ class TranslationServiceTest {
     @InjectMocks
     private TranslationService translationService;
 
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-    }
-
     @Test
     void testCreateTranslation() {
         Long userId = 1L;
-        User user = new User();
-        user.setId(userId);
+        User user = mock(User.class);
+        when(user.getId()).thenReturn(userId);
 
-        Translation translation = new Translation();
-        translation.setOriginalText("Hello");
-        translation.setTranslatedText("Hola");
+        Translation translation = mock(Translation.class);
+        when(translation.getOriginalText()).thenReturn("Hello");
+        when(translation.getTranslatedText()).thenReturn("Hola");
 
         when(userService.getUserById(userId)).thenReturn(user);
         when(translationRepository.save(any(Translation.class))).thenReturn(translation);
@@ -69,10 +63,10 @@ class TranslationServiceTest {
     @Test
     void testGetTranslationsByUserId() {
         Long userId = 1L;
-        Translation translation = new Translation();
-        translation.setId(1L);
-        translation.setOriginalText("Hello");
-        translation.setTranslatedText("Hola");
+        Translation translation = mock(Translation.class);
+        when(translation.getId()).thenReturn(1L);
+        when(translation.getOriginalText()).thenReturn("Hello");
+        when(translation.getTranslatedText()).thenReturn("Hola");
 
         when(translationCache.getUserTranslations(userId)).thenReturn(Optional.empty());
         when(translationRepository.findByUserId(userId)).thenReturn(Arrays.asList(translation));
@@ -88,10 +82,10 @@ class TranslationServiceTest {
     @Test
     void testGetTranslationById() {
         Long translationId = 1L;
-        Translation translation = new Translation();
-        translation.setId(translationId);
-        translation.setOriginalText("Hello");
-        translation.setTranslatedText("Hola");
+        Translation translation = mock(Translation.class);
+        when(translation.getId()).thenReturn(translationId);
+        when(translation.getOriginalText()).thenReturn("Hello");
+        when(translation.getTranslatedText()).thenReturn("Hola");
 
         when(translationCache.get(translationId)).thenReturn(Optional.empty());
         when(translationRepository.findById(translationId)).thenReturn(Optional.of(translation));
@@ -106,13 +100,13 @@ class TranslationServiceTest {
     @Test
     void testUpdateTranslation() {
         Long translationId = 1L;
-        Translation existingTranslation = new Translation();
-        existingTranslation.setId(translationId);
-        existingTranslation.setOriginalText("Hello");
+        Translation existingTranslation = mock(Translation.class);
+        when(existingTranslation.getId()).thenReturn(translationId);
+        when(existingTranslation.getOriginalText()).thenReturn("Hello");
 
-        Translation updatedDetails = new Translation();
-        updatedDetails.setOriginalText("Hi");
-        updatedDetails.setTranslatedText("Hola");
+        Translation updatedDetails = mock(Translation.class);
+        when(updatedDetails.getOriginalText()).thenReturn("Hi");
+        when(updatedDetails.getTranslatedText()).thenReturn("Hola");
 
         when(translationRepository.findById(translationId)).thenReturn(Optional.of(existingTranslation));
         when(translationRepository.save(any(Translation.class))).thenReturn(updatedDetails);
@@ -128,11 +122,11 @@ class TranslationServiceTest {
     @Test
     void testDeleteTranslation() {
         Long translationId = 1L;
-        Translation translation = new Translation();
-        translation.setId(translationId);
-        User user = new User();
-        user.setId(1L);
-        translation.setUser(user);
+        Translation translation = mock(Translation.class);
+        User user = mock(User.class);
+        when(user.getId()).thenReturn(1L);
+        when(translation.getUser()).thenReturn(user);
+        when(translation.getId()).thenReturn(translationId);
 
         when(translationRepository.findById(translationId)).thenReturn(Optional.of(translation));
 
@@ -144,46 +138,44 @@ class TranslationServiceTest {
     }
 
     @Test
-    void testcreateBulk() {
-        // Setup test data
+    void testCreateBulk() {
         Long userId1 = 1L;
         Long userId2 = 2L;
-        User user1 = new User();
-        user1.setId(userId1);
-        User user2 = new User();
-        user2.setId(userId2);
+        User user1 = mock(User.class);
+        when(user1.getId()).thenReturn(userId1);
+        User user2 = mock(User.class);
+        when(user2.getId()).thenReturn(userId2);
 
-        Translation translation1 = new Translation();
-        translation1.setUser(user1);
-        translation1.setOriginalText("Hello");
-        translation1.setTranslatedText("Hola");
-        translation1.setOriginalLanguage("en");
-        translation1.setTranslationLanguage("es");
+        Translation translation1 = mock(Translation.class);
+        when(translation1.getUser()).thenReturn(user1);
+        when(translation1.getOriginalText()).thenReturn("Hello");
+        when(translation1.getTranslatedText()).thenReturn("Hola");
+        when(translation1.getOriginalLanguage()).thenReturn("en");
+        when(translation1.getTranslationLanguage()).thenReturn("es");
 
-        Translation translation2 = new Translation();
-        translation2.setUser(user2);
-        translation2.setOriginalText("Goodbye");
-        translation2.setTranslatedText("Adiós");
-        translation2.setOriginalLanguage("en");
-        translation2.setTranslationLanguage("es");
+        Translation translation2 = mock(Translation.class);
+        when(translation2.getUser()).thenReturn(user2);
+        when(translation2.getOriginalText()).thenReturn("Goodbye");
+        when(translation2.getTranslatedText()).thenReturn("Adiós");
+        when(translation2.getOriginalLanguage()).thenReturn("en");
+        when(translation2.getTranslationLanguage()).thenReturn("es");
 
-        Translation duplicateTranslation = new Translation();
-        duplicateTranslation.setUser(user1);
-        duplicateTranslation.setOriginalText("Hello");
-        duplicateTranslation.setTranslatedText("Hola");
-        duplicateTranslation.setOriginalLanguage("en");
-        duplicateTranslation.setTranslationLanguage("es");
+        Translation duplicateTranslation = mock(Translation.class);
+        when(duplicateTranslation.getUser()).thenReturn(user1);
+        when(duplicateTranslation.getOriginalText()).thenReturn("Hello");
+        when(duplicateTranslation.getTranslatedText()).thenReturn("Hola");
+        when(duplicateTranslation.getOriginalLanguage()).thenReturn("en");
+        when(duplicateTranslation.getTranslationLanguage()).thenReturn("es");
 
-        BulkTranslationRequest request = new BulkTranslationRequest();
-        request.setTranslations(Arrays.asList(translation1, translation2, duplicateTranslation));
+        BulkTranslationRequest request = mock(BulkTranslationRequest.class);
+        when(request.getTranslations()).thenReturn(Arrays.asList(translation1, translation2, duplicateTranslation));
 
-        // Mock repository behavior
         when(userService.getUserById(userId1)).thenReturn(user1);
         when(userService.getUserById(userId2)).thenReturn(user2);
         when(translationRepository.existsByUserAndOriginalTextAndOriginalLanguageAndTranslationLanguage(
-                user1, "Hello", "en", "es")).thenReturn(true); // Mark as duplicate
+                user1, "Hello", "en", "es")).thenReturn(true);
         when(translationRepository.existsByUserAndOriginalTextAndOriginalLanguageAndTranslationLanguage(
-                user2, "Goodbye", "en", "es")).thenReturn(false); // Not a duplicate
+                user2, "Goodbye", "en", "es")).thenReturn(false);
         when(translationRepository.saveAll(any(List.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // Execute
@@ -191,29 +183,25 @@ class TranslationServiceTest {
 
         // Verify
         assertNotNull(result);
-        assertEquals(1, result.size()); // Only one non-duplicate translation should be saved
+        assertEquals(1, result.size());
         assertEquals("Goodbye", result.get(0).getOriginalText());
-        
-        // Verify cache interactions
         verify(translationCache).put(result.get(0));
         verify(translationCache).invalidateUserTranslations(userId2);
-        
-        // Verify no cache interaction for the duplicate
         verify(translationCache, never()).put(duplicateTranslation);
         verify(translationCache, never()).invalidateUserTranslations(userId1);
     }
 
     @Test
-    void testcreateBulkWithNullRequest() {
+    void testCreateBulkWithNullRequest() {
         assertThrows(IllegalArgumentException.class, () -> {
             translationService.createBulk(null);
         });
     }
 
     @Test
-    void testcreateBulkWithNullTranslations() {
-        BulkTranslationRequest request = new BulkTranslationRequest();
-        request.setTranslations(null);
+    void testCreateBulkWithNullTranslations() {
+        BulkTranslationRequest request = mock(BulkTranslationRequest.class);
+        when(request.getTranslations()).thenReturn(null);
         
         assertThrows(IllegalArgumentException.class, () -> {
             translationService.createBulk(request);
@@ -221,11 +209,13 @@ class TranslationServiceTest {
     }
 
     @Test
-    void testcreateBulkWithInvalidUser() {
-        BulkTranslationRequest request = new BulkTranslationRequest();
-        Translation translation = new Translation();
-        translation.setUser(new User()); // User with null ID
-        request.setTranslations(Arrays.asList(translation));
+    void testCreateBulkWithInvalidUser() {
+        BulkTranslationRequest request = mock(BulkTranslationRequest.class);
+        Translation translation = mock(Translation.class);
+        User user = mock(User.class);
+        when(user.getId()).thenReturn(null);
+        when(translation.getUser()).thenReturn(user);
+        when(request.getTranslations()).thenReturn(List.of(translation));
         
         assertThrows(IllegalArgumentException.class, () -> {
             translationService.createBulk(request);
@@ -233,17 +223,17 @@ class TranslationServiceTest {
     }
 
     @Test
-    void testcreateBulkWithEmptyText() {
+    void testCreateBulkWithEmptyText() {
         Long userId = 1L;
-        User user = new User();
-        user.setId(userId);
+        User user = mock(User.class);
+        when(user.getId()).thenReturn(userId);
         
-        BulkTranslationRequest request = new BulkTranslationRequest();
-        Translation translation = new Translation();
-        translation.setUser(user);
-        translation.setOriginalText(""); // Empty text
-        translation.setTranslatedText("Hola");
-        request.setTranslations(Arrays.asList(translation));
+        BulkTranslationRequest request = mock(BulkTranslationRequest.class);
+        Translation translation = mock(Translation.class);
+        when(translation.getUser()).thenReturn(user);
+        when(translation.getOriginalText()).thenReturn("");
+        when(translation.getTranslatedText()).thenReturn("Hola");
+        when(request.getTranslations()).thenReturn(List.of(translation));
         
         when(userService.getUserById(userId)).thenReturn(user);
         
@@ -251,6 +241,4 @@ class TranslationServiceTest {
             translationService.createBulk(request);
         });
     }
-
-
 }
